fix: 🐛 修复 CollapseItem 在微信小程序平台使用 title 插槽时宽度无法撑满的问题

--- a/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
+++ b/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
@@ -43,7 +43,10 @@
     @include when(expanded) {
       @include halfPixelBorder('bottom');
     }
-    
+
+    @include when(custom) {
+      display: block;
+    }
   }
 
   @include e(title) {
